--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Nova+Round&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap');
 
 /*--GENERAL--*/
 /*--#B08AE4--*/
@@ -30,7 +32,7 @@ body{
 .nav-bar{
     width: 100vw;
     display: grid; 
-    grid-template-columns: 53% 47%;
+    grid-template-columns: 50% 50%;
     justify-content: space-around;
     position: relative; 
     
@@ -80,15 +82,30 @@ body{
     font-size: 70px;
     color: aliceblue;
     margin-right: 5px;
+    margin-left: 10px;
     cursor: pointer;
+    
 }
 
 
 
 .slogan h1{
     font-family: 'Nova Round', cursive;
-    margin-left: 30px;
-    color: aliceblue;  
+    margin-left: 70px;
+    color: aliceblue; 
+    animation-name: glow;
+    animation-duration: 0.7s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes glow {
+    from {
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #3891A7, 0 0 40px #3891A7, 0 0 50px #3891A7, 0 0 60px #3891A7, 0 0 70px #3891A7;
+    }
+
+    to {
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    }
 }
 
 .slogan p{ 
@@ -105,8 +122,9 @@ body{
     border-radius: 10px;
     box-shadow: 1px 2px 36px gray;
     object-fit: cover;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 50px;
+    margin-top: 5px;
+    
     
 }
 
@@ -131,7 +149,7 @@ body{
 .langmenu-connect{
     width: 100%;
     margin-bottom: 10px;
-    margin-top: 20px;
+    margin-top: 5px;
     margin-left: 800px;
     
         
@@ -143,16 +161,22 @@ body{
     width: 125px;  
     box-shadow: 0px 1px 10px rgba(19 210 177 /55%);
     position: absolute;
-    margin-left: 120px;
+    margin-top: 10px;
+    padding: 0;
+
+    
     
 
   
     
 }
 #select-language select:hover{
+
     color: #94f7e6;
     background-color:#E00105;
 }
+
+
 
 
 #select-language select{
@@ -166,6 +190,7 @@ body{
     border-radius: 5px;
     position: absolute;
     cursor: url(assets/hand-pointer-regular.svg), default;
+    
 }
 
 
@@ -357,7 +382,7 @@ label input{
     background-color: #94f7e6;
     border-radius: 50px;
     margin-top: 1rem;
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     font-family: 'Nova Round', cursive;
     text-align: center;
     transition: all .3s ease-in-out;
@@ -375,12 +400,15 @@ label input{
     width: 100%;
     display: flex;
     justify-content: space-around;
-    position: absolute;
-    margin-top: 0px;
-    margin-left: -40px;   
+    position: fixed;
+    margin-left: 30px; 
+    margin-top: -40px; 
+    z-index: 9;
 }
 
-.menu-nav ul{
+
+
+.nav-inner ul{
     display: flex;
     justify-content: space-around;
     list-style-type: none;
@@ -394,7 +422,7 @@ label input{
     
 }
 
-.right-nav-bar a{
+.menu-nav a{
     color: white;
     text-decoration: none;
     vertical-align: middle;   
@@ -404,7 +432,7 @@ label input{
 .icone-home{
     color: aliceblue;
     font-size: 30px;
-    margin-right: 10px;
+    margin-right: 2px;
     margin-bottom: 10px;
     vertical-align: middle;
 }
@@ -425,21 +453,21 @@ label input{
  
     
 #bar-red{
-    width: 115px;
+    width: 120px;
     height: 5px;
     background-color:#E00105;
     margin-top: 5px;
 }
 
 #bar-yellow{
-    width: 85px;
+    width: 90px;
     height: 5px;
     background-color: yellow;
     margin-top: 5px;
 }
 
 #bar-blue{
-    width: 250px;
+    width: 260px;
     height: 5px;
     background-color: blue;
     margin-top: 5px;
@@ -588,6 +616,8 @@ label input{
     color: #94f7e6;
 }
 
+
+
     /*SECTION ACCEUIL*/
 
 .home-inner{
@@ -707,6 +737,7 @@ h2 img{
     height: 100vh; 
     position: relative;
     margin: auto;
+    margin-bottom: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #000000;
         background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url(assets/poste.png);
@@ -730,19 +761,19 @@ h2 img{
 }
 
 .nousconnaitre-questions i{
-    font-size: 40px;
+    font-size: 30px;
     color: #E00105;
     margin-left: 10px;
-    animation-duration: .8s;
+    /*animation-duration: .8s;
     animation-name: clignoter;
     animation-iteration-count: infinite;
-    transition: none;
+    transition: none;*/
 
 }
 
 h2 span{
     color: #E00105;
-    animation-duration: .8s;
+    animation-duration: 1s;
     animation-name: clignoter;
     animation-iteration-count: infinite;
     transition: none;
@@ -760,6 +791,18 @@ h2 span{
     }
 }
 
+.nousconnaitre-questions #slogan{
+   font-family: 'Nova Round', cursive;
+   font-size: 30px;
+   text-align: right; 
+   color: #E00105;
+   margin-bottom: 20px;
+animation-duration: .8s;
+    animation-name: clignoter;
+    animation-iteration-count: infinite;
+    transition: none;
+}
+
 .nousconnaitre-inner{
     width: 100%;
     display: flex;
@@ -771,13 +814,12 @@ h2 span{
 }
 
 .nousconnaitre-reponse{
+    margin-top: 20px;
     width: 57%;
-    color: #E00105;
+    color: black;
     font-family: 'Roboto', sans-serif;
     font-size: 0.8rem;
-    font-weight: bold;
     line-height: 33px;
-    border-radius: 10px;
     position: absolute;
     padding: 1em;
     text-align: left;
@@ -796,7 +838,7 @@ h2 span{
     padding: 10px 20px 5px 5px;
     position: absolute;
     margin-left: 640px;
-    margin-top: 100px;
+    margin-top: 58px;
     
     
 }
@@ -810,9 +852,11 @@ h2 span{
 
 .algercall-taches img{
 
+    width: 350px;
+
         border-radius: 20px;
         margin-left: 50px;
-        margin-top: 20px;
+        margin-top: 25px;
         box-shadow: 1px 0px 15px rgba(19 210 177 /55%);
         
 
@@ -832,7 +876,7 @@ h2 span{
     }
 
     40% {
-        color: black;
+        color: white;
     }
 
     100% {
@@ -858,9 +902,97 @@ h2 span{
 
 .nous-connaitre ul li i{
     margin-right: 15px;
-    color: #94f7e6;
+    color: #38a896;
     
 }
+
+/*QUE PENSENT DE NOUS NOS CLIENTS*/
+
+.retour-client{
+    width: 80vw;
+    height: 100vh;
+    margin: auto;
+
+    display: block;
+    
+}
+#avis{
+    font-size: 20px;
+    font-family: 'La Belle Aurore', cursive;
+    color: #E00105;
+    text-align: center;
+    padding-top: 20px;
+    margin-bottom: 20px;
+    animation-duration: .8s;
+        animation-name: clignoterac;
+        animation-iteration-count: infinite;
+        transition: none;
+    
+}
+
+.tousLesAvis{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+
+
+.avis{
+    width: 330px;
+    height: 250px;
+    border: 2px transparent;
+    border-radius: 30px;
+    margin-bottom: 20px;
+    padding: 10px;
+
+    
+
+}
+
+.avis h5{
+    font-family: 'Goudy Bookletter 1911', serif;
+    font-size: 23px;
+
+}
+
+.avis p{
+    font-family: 'La Belle Aurore', cursive;
+    color: blue;
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    line-height: 25px;
+    
+}
+.signature{
+    text-align: right;
+}
+
+#avis1{
+    background-color: yellow;
+    
+}
+#avis2 {
+    background-color: yellowgreen;
+
+}
+
+#avis3 {
+    background-color: rgb(187, 187, 214);
+
+}
+
+#avis4 {
+    background-color: greenyellow;
+
+}
+
+#avis5 {
+    background-color: mediumaquamarine;
+
+}
+
 
 
 /*PAGE CONTACT*/
@@ -952,11 +1084,7 @@ h2 span{
 #dot:hover i{
     color: #94f7e6;
 }
-
-
-    
-    
-    
+   
  /*formulaire de contact*/
 
 form{
@@ -1087,13 +1215,524 @@ select{
         font-weight: bold;
     }
 
+    .menu {
+             display: none;
+         }
+
+    
+ @media screen and (max-width: 768px) {
+    .menu-nav {
+            
+                display: flex;
+                align-items: center;
+                padding-left: 30px;
+            
+            
+            }
+
+            .menu{
+                display: block;
+                z-index: 20;
+                margin-left: 500px;
+                margin-top: 0px;
+                
+            }
+    
+            .bar {
+                display: block;
+                height: 5px;
+                width: 50px;
+                background-color: #fff;
+                border-radius: 5px;
+                margin-bottom: 5px;
+                transition: all 0.5s ease;
+                cursor: pointer;
+            }
+
+            
+    
+            .bar:last-child {
+                margin-bottom: 0;
+            }
+    
+            .menu.active .first {
+                transform: rotate(45deg) translate(5px, 5px);
+                transition: all 0.5s ease;
+            }
+    
+            .menu.active .second {
+                opacity: 0;
+                transition: all 0.5s ease;
+            }
+    
+            .menu.active .third {
+                transform: rotate(-45deg) translate(5px, -5px);
+                transition: all 0.5s ease;
+            }
+    
+            .nav-inner ul.active {
+                transform: translateX(0);
+            }
+    
+            .nav-inner ul {
+                width: 55vw;
+                height: 55vh;
+                position: fixed;
+                top: 0;
+                left: 300px;
+                background-color: #000;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: right;
+                gap: 30px;
+                transform: translateX(100%);
+                transition: all 0.5s ease;
+            }
+    
+            .nav-inner ul li {
+                font-size: 0.6rem;
+                font-weight: 500;
+            }
+        
+
+
+
+/*--BARRE DE NAVIGATION--*/
+
+
+.nav-bar {
+    grid-template-columns: 70% 30%;
+
+}
+
+/*-- COTE GAUCHE DE LA BARRE DE NAVIGATION : LOGO ET SLOGAN--*/
+
+
+
+.logo-nav {
+
+    font-size: 40px;
+    margin-left: 2px;
+
+
+}
+
+
+
+.slogan h1 {
+    margin-left: 3px;
+    font-size: 20px;
+}
+
+
+.slogan p {
+    font-size: 15px;
+    margin: 3px;
+    
+}
+
+.slogan h6 {
+    font-size: 13px;
+    margin: 1px;
+
+}
+
+.logonav-slogan-phAlger img {
+    width: 80px;
+    margin-right: 5px;
+    margin-top: 5px;
+
+
+}
+
+/*--COTE DROIT DE LA BARRE DE NAVIGATION--*/
+
+
+
+/*--SELECTEUR DE LANGUE + BOUTON CONNECTE--*/
+
+.langmenu-connect {
+    display: none;
+    
+}
+
+
+/*--LE MENU DE LA BARRE DE NAVIGATION--*/
+
+#bar-red {
+    width: 135px;
+    
+}
+
+#bar-yellow {
+    width: 100px;
+}
+
+#bar-blue {
+    width: 290px;
+}
+
+
+/*LISTE CLIENTS*/
+.liste-client {
+    height: 40px;
+}
+
+.liste-client h3 {
+    font-size: .6rem;
+}
+
+.logos-clients {
+    width: 40%;
+}
+
+.logos-clients img {
+
+    width: 30px;
+   
+}
+
+/*RESEAUX SOCIAUX*/
+
+.reseaux-sociaux {
+    height: 110px;
+    width: 45px;
+    z-index: 20;
+    top: 110px;
+
+}
+
+.reseaux-sociaux i {
+    font-size: 20px;
+}
+
+.reseaux-sociaux:hover {
+    background-color: #94f7e6;
+}
+
+/*BOUTON HAUT*/
+.btn-haut {
+    height: 40px;
+    width: 40px;
+    z-index: 20;
+    top: 300px;
+
+}
+
+.btn-haut i {
+    width: 15px;
+
+}
+
+.btn-haut:hover {
+    background-color: #E00105;
+}
+
+.btn-haut:hover {
+    background-color: white;
+}
+
+/*SECTION ACCEUIL*/
+
+.home-inner {
+    width: 80vw;
+    height: 100vh;
+    background-color: #E00105;
+    margin: auto;
+}
+
+.home-inner {
+    position: relative;
+}
+
+.text-home {
+    padding-top: 120px;
+}
+
+.img-groupe img {
+    width: 150px;
+    height: auto;
+    margin-left: 200px;
+    margin-top: 20px;
+}
+
+
+h2 img {
+    width: 20px;
+    
+}
+
+
+.call-icon img {
+    z-index: 20;
+    width: 70px;
+    margin-left: 950px;
+    margin-top: -400px;
+}
+
+.text-home p {
+    margin-top: 30px;
+    font-size: 0.6rem;
+    
+}
+
+.text-home h2 {  
+    font-size: 0.7rem;
+   
+}
+
+.call-icon img {
+    font-size: 10px;
+}
+
+/*NOUS CONNAITRE*/
+
+
+.nousconnaitre-questions {
+    font-size: 0.4rem;
+    margin-left: 10px;
+    margin-top: 20px;
+    padding: 10px 10px 10px 10px;
+
+}
+
+.nousconnaitre-questions i {
+    font-size: 20px;
+    color: #E00105;
+    margin-left: 10px;
+
+}
+
+
+
+.nousconnaitre-questions #slogan {
+    font-size: 20px;
+    text-align: center;
+}
+
+.nousconnaitre-inner {
+    
+   
+    padding-top: 120px;
+    padding-left: 20px;
+}
+
+.nousconnaitre-reponse {
+    margin-top: 20px;
+    font-size: 0.6rem;
+    line-height: 20px;
+
+}
+
+
+.algercall-taches {
+    
+    margin-left: 300px;
+    margin-top: 45px;
+
+
+}
+
+
+.algercall-taches p {
+    
+    font-size: 15px;
+}
+
+.algercall-taches img {
+
+    width: 180px;
+    margin-left: 10px;
+    margin-top: 25px;
     
 
+}
 
-       
+.nous-connaitre ul {
+    margin-top: 10px;
+    font-size: 15px;
+
+
+}
+
+.nous-connaitre ul li {
+    list-style-type: none;
+    text-indent: 20px;
+
+
+}
+
+.nous-connaitre ul li i {
+    margin-left: -40px;
+
+}
+
+/*QUE PENSENT DE NOUS NOS CLIENTS*/
+
+
+
+#avis {
+    font-size: 15px;
+    
+
+}
+
+
+
+.avis {
+    width: 180px;
+    height: 150px;
+
+}
+
+.avis h5 {
+    font-size: 15px;
+
+}
+
+.avis p {
+    
+    font-size: 15px;
+    line-height: 10px;
+
+}
+
+
+#avis3 {
+    margin-left: 5px;
+    margin-right: 5px;
+
+}
+
+
+/*PAGE CONTACT*/
+
+.blue-inner {
+    width: 500px;
+    height: 100%;
+
+}
+
+.blue-inner h4,
+.blue h3 {
+    font-size: 15px;
+    margin-top: 30px;
+    text-align: left;
+}
+
+.first-ligne {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 40px;
+
+}
+
+
+.first-ligne p {
+    font-size: 15px;
+    color: white;
+    margin-top: 10px;
+}
+
+.chalk,
+.case,
+#dot {
+    font-size: 25px;
+    height: 50px;
+    width: 50px;
+
+}
+
+#dot i {
+    margin-left: 4px;
+    font-size: 7px;
+}
+
+
+/*formulaire de contact*/
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin-top: 20px;
+}
+
+
+input,
+#contact select {
+    background-color: #3891A7;
+    height: 35px;
+    width: 500px;
+   
+}
+
+
+
+
+::placeholder {
+    font-size: 12px;
+
+}
+
+
+select {
+
+    font-size: 12px;
+    
+
+}
+
+
+textarea {
+    
+    width: 500px;
+}
+
+#btn-sub {
+    
+    font-size: 12px;
+    height: 30px;
+    width: 90px;
+    
+
+}
+
+
+
+/*BAS DE PAGE*/
+iframe {
+    border-radius: 20px;
+    font-size: 15px;
+    margin-top: 25px;
+    margin-left: 15px;
+    width: 200px;
+}
+
+.gmaps p {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
+    color: white;
+    margin-bottom: 10px;
+}
+
+.adresse {
+    width: 300px;
+    font-size: 12px;
+    margin-left: -200px;
+    margin-right: 25px;
+    margin-top: 50px;
+
+}
+
+
+ }
 
     
-  
 
 
 
